src/main/java/com/example/Triple_clone/common/error/ErrorCode.java
package com.example.Triple_clone.common.error;

import org.springframework.http.HttpStatus;

public interface ErrorCode {
    String name();
    HttpStatus getHttpStatus();
    String getMessage();
}
